@@ -7,6 +7,7 @@ Changes in progress
 ---------------------------------------------------------------------------------------
 - XTEC lib: Changed replace_url to support only a single URL (Trello #1027)
 - Theme reactor-serveis-educatius: Improved menu and added search option in responsive version (Trello #981)
+- Theme reactor: Fixed position of the legends of the images in custom galleries inserted in articles (Trello #1011)
 
 
 
